--- a/WebContent/stylesheet.css
+++ b/WebContent/stylesheet.css
@@ -168,3 +168,24 @@ button {
     border: 3px solid gray;
     text-align: center;
 }
+
+/* Chat box vertical scroll bar */
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+::-webkit-scrollbar-button {
+    width: 8px;
+    height: 5px;
+}
+::-webkit-scrollbar-track {
+    background: #070707;
+}
+::-webkit-scrollbar-thumb {
+    background: gray;
+    border: thin solid gray;
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+    background: #1b1b1b;
+}   
