--- a/WebContent/stylesheet.css
+++ b/WebContent/stylesheet.css
@@ -78,6 +78,12 @@ html {
     color: gray;
     text-align: center;
     font-size: 40px;
+    display: block;
+}
+
+canvas {
+    width: 100%;
+    height: 100%;
 }
 
 #inventory {
@@ -88,8 +94,10 @@ html {
     text-align: center;
     font-size: 40px;
     margin-top: 30px;
+    margin-bottom: 10px;
     float: down;
     overflow-x: auto;
+    overflow-y: hidden;
     white-space: nowrap;
 }
 
@@ -175,6 +183,7 @@ button {
 
 ::-webkit-scrollbar {
     width: 8px;
+    height: 8px;
 }
 ::-webkit-scrollbar-button {
     width: 8px;
@@ -193,5 +202,14 @@ button {
 }
 
 #inventory_list {
-	list-style-type: none;
+	list-style-type: inline;
+}
+
+#toggle_map {
+    z-index: 3;
+    display: block;
+    float: right;
+    position: absolute;
+    top: 45%;
+    left: 62%
 }
