--- a/WebContent/stylesheet.css
+++ b/WebContent/stylesheet.css
@@ -213,3 +213,26 @@ button {
     top: 45%;
     left: 62%
 }
+
+#duel_content {
+    background: #F5F5F5;
+    height: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 200px;
+    border-top: 6px solid #bf2224;
+    border-bottom: 6px solid #bf2224;
+}
+
+/* Attack button in duels */
+#basic_attack {
+    position: relative !important;
+
+    margin-left: 40%;
+}
+
+.player_stats {
+    padding-top: 0px !important;
+    border: 0px !important;
+    border-bottom: 0px !important;
+}
